# MinimalRustImport

./: .gitignore  BREADCRUMBS.md  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/minimalrustimport/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/minimalrustimport/: FooWrapper.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/minimalrustimport/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
simple/: Cargo.toml
simple/.cargo/: config.toml
simple/src/: lib.rs
